security-group.tf

resource "aws_security_group" "SG1" {
  name        = "SG1"
  description = "Creating firewall for WordPress OS to Allow inbound traffic"
  vpc_id      = "${aws_vpc.MINEVPC.id}"

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SecurityGroup-1"
  }
}

resource "aws_security_group" "SG2" {
  name        = "SG2"
  description = "Creating firewall for MySQL OS to Allow inbound traffic for BastionOS only"
  vpc_id      = "${aws_vpc.MINEVPC.id}"

  ingress {
    description = "Allow SQL from VPC"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SecurityGroup-2"
  }
}


resource "aws_security_group" "SG3" {
  name        = "SG3"
  description = "Creating firewall for Bastion OS to Allow SSH for Bastion"
  vpc_id      = "${aws_vpc.MINEVPC.id}"

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SecurityGroup3"
  }
}
